# nccl

./: CMakeLists.txt
src/: core.cu  core.h  libwrap.cu
test/: CMakeLists.txt
test/single/: all_gather_test.cu  all_reduce_test.cu  broadcast_test.cu  reduce_scatter_test.cu  reduce_test.cu
